# Compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: ARCHITECTURE.md  report.md
include/: ast.h  codegen.h  lexer.h  parser.h  sema.h
src/: ast.c  codegen.c  lexer.c  main.c  parser.c  sema.c
tests/: run_tests.py
tests/inputs/: bubble_sort.nv  factorial.nv  multiply.nv
